--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "g": "^2.0.1",
     "idb": "^8.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.1",
     "sass": "^1.71.1",
     "uuid": "^9.0.1",
