--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.1",
     "sass": "^1.71.1",
