--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.3.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
@@ -17,7 +18,9 @@
     "idb": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.1",
     "sass": "^1.71.1",
