--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.1",
