--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "idb": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
