--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "g": "^2.0.1",
     "idb": "^8.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.2",
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
